# ai-agent-management-platform

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  Makefile
.github/: release-config.json
.github/.workflows/: amp_instrumentation_release.yaml
.github/scripts/: update-docs-versions.sh  update-install-helpers.sh
.github/workflows/: release.yml
agent-manager-service/: .air.toml  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  go.mod  go.sum  main.go
agent-manager-service/.github/: copyright_header.tmpl
agent-manager-service/api/: agent_routes.go  app.go  health_check_routes.go  infra_resource_routes.go  internal_routes.go  observability_routes.go
agent-manager-service/config/: config.go  config_loader.go  env_reader.go  version.go
console/: Dockerfile  nginx.conf  rush.json
deployments/: docker-compose.yml  single-cluster-config.yaml
docs/: quick-start.md
libs/amp-instrumentation/: README.md  pyproject.toml
libs/amp-instrumentation/src/amp_instrumentation/_bootstrap/: constants.py  initialization.py  sitecustomize.py
libs/amp-instrumentation/src/amp_instrumentation/cli/: main.py
libs/amp-instrumentation/tests/: conftest.py  test_cli.py  test_initialization.py  test_sitecustomize.py
python-instrumentation-provider/: Dockerfile  setup-instrumentation.py  sitecustomize.py
quick-start/: Dockerfile  install-helpers.sh  install.sh  k3d-config.yaml  port-forward.sh  uninstall.sh
traces-observer-service/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.MD  go.mod  main.go  openapi.yaml
(+477 files in other folders)
